footer and grid

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,14 @@
   </head>
   <body>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
-    <include src="./partials/example.html"></include>
+    
     <!-- <komentarz -->
+
+    <!-- Grid for movies-->
+    <include src="./partials/container_movies.html"></include>
+    
+    <!-- Footer -->
+    <include src="./partials/footer.html"></include>
 
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
