1st part, work in progress

--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,16 @@
   </head>
   <body>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
-    
+
     <!-- <komentarz -->
 
     <!-- Grid for movies-->
     <include src="./partials/container_movies.html"></include>
-    
+
     <!-- Footer -->
     <include src="./partials/footer.html"></include>
+    <!-- Modal -->
+    <include src="./partials/modal.html"></include>
 
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
