index.html upfated with current version to avoid conflicts

--- a/src/index.html
+++ b/src/index.html
@@ -19,15 +19,15 @@
     />
   </head>
   <body>
-    <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
-
-    <!-- <komentarz -->
-
+    <!-- header -->
+    <include src="./partials/header.html"></include>
     <!-- Grid for movies-->
     <include src="./partials/container_movies.html"></include>
-
+    <!--     pagination -->
+    <include src="./partials/pagination.html"></include>
     <!-- Footer -->
     <include src="./partials/footer.html"></include>
+
     <!-- Modal -->
     <include src="./partials/modal.html"></include>
 
