--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,11 @@
   </head>
   <body>
     <!-- header -->
-    <include src="./partials/header.html"></include>
+    <!-- <include src="./partials/header.html"></include> -->
     <!-- Grid for movies-->
     <include src="./partials/container_movies.html"></include>
     <!--     pagination -->
-    <include src="./partials/pagination.html"></include>
+    <!-- <include src="./partials/pagination.html"></include> -->
     <!-- Footer -->
     <include src="./partials/footer.html"></include>
 
