--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,9 @@
   </head>
   <body>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
-    <include src="./partials/example.html"></include>
-    <include src="./partials/header.html"></include>
+
+    <include src="./partials/header_popular.html"></include>
+   
     <!-- <komentarz -->
 
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
