--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
 
-    <include src="./partials/header_popular.html"></include>
+    <include src="./partials/header_home.html"></include>
    
     <!-- <komentarz -->
 
