--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,6 @@
     <link href="./images/favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
-
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
 
     <include src="./partials/header_home.html"></include>
@@ -39,5 +38,6 @@
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
+    <script src="./js/trending-movies.js" type="module"></script>
   </body>
 </html>
