--- a/src/index.html
+++ b/src/index.html
@@ -40,5 +40,6 @@
     <script src="./index.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
     <script src="./js/trending-movies.js" type="module"></script>
+    <script src="./js/firebase.js" type="module"></script>
   </body>
 </html>
