--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
+    <script src="./js/modal_team.js" type="module"></script>
+
     <script src="./js/trending-movies.js" type="module"></script>
   </body>
 </html>
