--- a/src/library.html
+++ b/src/library.html
@@ -39,5 +39,6 @@
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
+    <script src="./js/firebase-library.js" type="module"></script>
   </body>
 </html>
