BARDZO WSTĘPNIE działający firebase

--- a/src/library.html
+++ b/src/library.html
@@ -36,6 +36,8 @@
     <!-- Modal -->
     <include src="./partials/modal.html"></include>
 
+    <!--login panel-->
+    <include src="./partials/firebase_login.html"></include>
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
