--- a/src/library.html
+++ b/src/library.html
@@ -44,5 +44,6 @@
     <script src="./js/modal.js" type="module"></script>
     <script src="./js/firebase-library.js" type="module"></script>
     <script src="./js/modal_team.js" type="module"></script>
+    <script src="./js/firebase.js" type="module"></script>
   </body>
 </html>
