login frontend fix

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <!-- Modal -->
     <include src="./partials/modal.html"></include>
     <include src="./partials/modal_team.html"></include>
-    <include src="./partials/firebase_login.html"></include>
+    <!-- <include src="./partials/firebase_login.html"></include> -->
 
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
