--- a/src/library.html
+++ b/src/library.html
@@ -38,7 +38,7 @@
     <include src="./partials/modal_team.html"></include>
 
     <!--login panel-->
-    <include src="./partials/firebase_login.html"></include>
+    <!-- <include src="./partials/firebase_login.html"></include> -->
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
