--- a/src/library.html
+++ b/src/library.html
@@ -38,6 +38,9 @@
     <include src="./partials/modal.html"></include>
     <include src="./partials/modal_team.html"></include>
 
+    <!-- Loader -->
+    <include src="./partials/loader.html"></include>
+
     <!--login panel-->
     <!-- <include src="./partials/firebase_login.html"></include> -->
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
@@ -46,5 +49,6 @@
     <script src="./js/firebase-library.js" type="module"></script>
     <script src="./js/modal_team.js" type="module"></script>
     <script src="./js/firebase.js" type="module"></script>
+    <script src="./js/loader.js" type="module"></script>
   </body>
 </html>
