--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,8 @@
     <script src="./index.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
     <script src="./js/modal_team.js" type="module"></script>
+    <script src="./js/modal_team_scroll.js" type="module"></script>
+
 
     <script src="./js/trending-movies.js" type="module"></script>
     <script src="./js/firebase.js" type="module"></script>
