video modal almost ready, loader fixes done

--- a/src/library.html
+++ b/src/library.html
@@ -37,7 +37,7 @@
     <!-- Modal -->
     <include src="./partials/modal.html"></include>
     <include src="./partials/modal_team.html"></include>
-
+    <include src="./partials/modal_video.html"></include>
 
     <!-- Loader -->
     <include src="./partials/loader.html"></include>
@@ -50,10 +50,10 @@
     <script src="./js/modal.js" type="module"></script>
     <script src="./js/firebase-library.js" type="module"></script>
     <script src="./js/modal_team.js" type="module"></script>
+    <script src="./js/modal_video.js" type="module"></script>
 
     <script src="./js/loader.js" type="module"></script>
 
     <script src="./js/firebase.js" type="module"></script>
-
   </body>
 </html>
