--- a/src/library.html
+++ b/src/library.html
@@ -40,7 +40,7 @@
     <include src="./partials/modal_video.html"></include>
 
     <!-- Loader -->
-    <include src="./partials/loader.html"></include>
+    <!-- <include src="./partials/loader.html"></include> -->
 
     <!--login panel-->
     <!-- <include src="./partials/firebase_login.html"></include> -->
