--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
 
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
+    <script src="./js/localstorage.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
     <script src="./js/modal_team.js" type="module"></script>
     <script src="./js/modal_team_scroll.js" type="module"></script>
