--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,8 @@
     <script src="./js/modal_team.js" type="module"></script>
     <script src="./js/modal_video.js" type="module"></script>
     <script src="./js/loader.js" type="module"></script>
-    <script src="./js/trending-movies.js" type="module"></script>
     <script src="./js/firebase.js" type="module"></script>
+    <script src="./js/trending-movies.js" type="module"></script>
+    <script src="./js/mockApi.js" type="module"></script>
   </body>
 </html>
