--- a/src/library.html
+++ b/src/library.html
@@ -53,5 +53,6 @@
     <script src="./js/modal_team_scroll.js" type="module"></script>
     <script src="./js/modal_video.js" type="module"></script>
     <script src="./js/firebase.js" type="module"></script>
+    <script src="./js/trending-movies.js" type="module"></script>
   </body>
 </html>
