--- a/src/index.html
+++ b/src/index.html
@@ -21,28 +21,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
-    <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
-
+    <!-- Header -->
     <include src="./partials/header_home.html"></include>
-
     <!-- Grid for movies-->
     <include src="./partials/container_movies.html"></include>
-    <!--     pagination -->
+    <!-- pagination -->
     <include src="./partials/pagination.html"></include>
     <!-- Footer -->
     <include src="./partials/footer.html"></include>
-
-    <!-- Modal -->
+    <!-- Modals -->
     <include src="./partials/modal.html"></include>
     <include src="./partials/modal_team.html"></include>
     <include src="./partials/modal_video.html"></include>
-
-    <!-- <include src="./partials/firebase_login.html"></include> -->
-
     <!-- Loader -->
     <include src="./partials/loader.html"></include>
 
-    <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
     <script src="./js/modal_team.js" type="module"></script>
