--- a/src/library.html
+++ b/src/library.html
@@ -29,7 +29,8 @@
     <!-- Grid for movies-->
     <include src="./partials/container_movies.html"></include>
     <!-- pagination -->
-    <include src="./partials/pagination.html"></include>
+    <include src="./partials/paginationlibrary.html"></include>
+
     <!-- Footer -->
     <include src="./partials/footer.html"></include>
     <!-- Modals -->
@@ -40,6 +41,7 @@
     <include src="./partials/loader.html"></include>
 
     <script src="./index.js" type="module"></script>
+    <script src="./js/trending-movies.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
     <script src="./js/loader.js" type="module"></script>
     <script src="./js/modal_team.js" type="module"></script>
