--- a/src/library.html
+++ b/src/library.html
@@ -47,6 +47,7 @@
     <script src="./js/modal_team.js" type="module"></script>
     <script src="./js/modal_team_scroll.js" type="module"></script>
     <script src="./js/modal_video.js" type="module"></script>
+    <script src="./js/pagination_library.js" type="module"></script>
     <script src="./js/firebase.js" type="module"></script>
     <script src="./js/trending-movies.js" type="module"></script>
   </body>
