zmiany do form logowania
Dodatkowo - zmiany w nazewnictwie plików
dodane ukrycie form login i reg przy udanym logowaniu

--- a/src/library.html
+++ b/src/library.html
@@ -41,6 +41,7 @@
     <include src="./partials/loader.html"></include>
 
     <script src="./index.js" type="module"></script>
+    <script src="./js/login-register.js" type="module"></script>
     <script src="./js/trending-movies.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
     <script src="./js/loader.js" type="module"></script>
