--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
     <include src="./partials/loader.html"></include>
 
     <script src="./index.js" type="module"></script>
+    <script src="./js/login-register.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
     <script src="./js/modal_team.js" type="module"></script>
     <script src="./js/modal_team_scroll.js" type="module"></script>
